Spring security feature is added

--- a/employee_management_system/src/main/resources/application.properties
+++ b/employee_management_system/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 spring.devtools.restart.enabled=false
+
+##Spring security credentials
+#spring.security.user.name=admin
+#spring.security.user.password=test1234
+
+#
+# SECURITY JDBC properties
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/testBootSecurity?serverTimeZone=UTC&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
